# recurrl-jax

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/leap_hand/: __init__.py  domain_randomization_model.py  env.py  env_wrapper.py  generate_grasp_cache.py  observation_buffer.py  rewards.py  train.py  visualize_grasps.py  visualizer.py
examples/leap_hand/config/: default_config.yaml
examples/leap_hand/config/task/: leap_hand.yaml
examples/leap_hand/config/trainer/: ppo.yaml
examples/leap_hand/config/trainer/seq_model/: gru.yaml
examples/leap_hand/grasp_cache/: generate_grasp_cache.py  generate_grasp_cache_v2.py  generate_grasp_cache_v3.py  grasp_cache.py
examples/leap_hand/xmls/: leap_rh_mjx.xml  reorientation_cube.xml  scene_mjx_cube.xml
recurrl_jax/: __init__.py
recurrl_jax/agents/: a2c.py  base_agent.py  ppo.py
recurrl_jax/model_fns/: __init__.py  achead_fns.py  repr_fns.py  seq_fns.py
recurrl_jax/models/: actor_critic.py
recurrl_jax/models/rnns/: rnn.py
recurrl_jax/models/transformers/: gtrxl.py
recurrl_jax/trainers/: base_trainer.py  trainer.py  utils.py
recurrl_jax/utils/: logger.py  quat_utils.py  recurrent_utils.py  running_mean_std.py  video_recorder.py  wrappers.py
